--- a/lib/css/output.css
+++ b/lib/css/output.css
@@ -937,6 +937,12 @@
   .order-3 {
     order: 3;
   }
+  .col-span-1 {
+    grid-column: span 1 / span 1;
+  }
+  .col-span-4 {
+    grid-column: span 4 / span 4;
+  }
   .col-span-6 {
     grid-column: span 6 / span 6;
   }
@@ -1786,6 +1792,12 @@
       border-color: var(--color-blue-600);
     }
   }
+  .min-w-\[960px\] {
+    min-width: 960px;
+  }
+  .min-w-\[1000px\] {
+    min-width: 1000px;
+  }
   .flex-1 {
     flex: 1;
   }
@@ -1969,6 +1981,12 @@
   .gap-x-0 {
     column-gap: calc(var(--spacing) * 0);
   }
+  .gap-x-4 {
+    column-gap: calc(var(--spacing) * 4);
+  }
+  .gap-x-6 {
+    column-gap: calc(var(--spacing) * 6);
+  }
   .gap-x-\[10\%\] {
     column-gap: 10%;
   }
@@ -2005,6 +2023,9 @@
     :where(& > :not(:last-child)) {
       border-color: var(--color-gray-100);
     }
+  }
+  .overflow-auto {
+    overflow: auto;
   }
   .overflow-hidden {
     overflow: hidden;
