--- a/lib/css/output.css
+++ b/lib/css/output.css
@@ -1792,11 +1792,23 @@
       border-color: var(--color-blue-600);
     }
   }
+  .min-w-\[1px\] {
+    min-width: 1px;
+  }
   .min-w-\[960px\] {
     min-width: 960px;
   }
   .min-w-\[1000px\] {
     min-width: 1000px;
+  }
+  .min-w-\[1024px\] {
+    min-width: 1024px;
+  }
+  .min-w-\[1100px\] {
+    min-width: 1100px;
+  }
+  .min-w-\[1280px\] {
+    min-width: 1280px;
   }
   .flex-1 {
     flex: 1;
