--- a/lib/css/output.css
+++ b/lib/css/output.css
@@ -1801,6 +1801,9 @@
   .min-w-\[1px\] {
     min-width: 1px;
   }
+  .min-w-\[10px\] {
+    min-width: 10px;
+  }
   .min-w-\[11px\] {
     min-width: 11px;
   }
@@ -1818,6 +1821,9 @@
   }
   .min-w-\[1024px\] {
     min-width: 1024px;
+  }
+  .min-w-\[1080px\] {
+    min-width: 1080px;
   }
   .min-w-\[1100px\] {
     min-width: 1100px;
@@ -3457,6 +3463,11 @@
       max-width: 360px;
     }
   }
+  .md\:min-w-\[1100px\] {
+    @media (width >= 48rem) {
+      min-width: 1100px;
+    }
+  }
   .md\:grid-cols-2 {
     @media (width >= 48rem) {
       grid-template-columns: repeat(2, minmax(0, 1fr));
@@ -3788,6 +3799,11 @@
       max-width: 480px;
     }
   }
+  .lg\:min-w-\[1279px\] {
+    @media (width >= 64rem) {
+      min-width: 1279px;
+    }
+  }
   .lg\:min-w-auto {
     @media (width >= 64rem) {
       min-width: auto;
@@ -3911,6 +3927,13 @@
       line-height: var(--tw-leading, var(--text-xl--line-height));
     }
   }
+  .md\:lg\:min-w-\[1279px\] {
+    @media (width >= 48rem) {
+      @media (width >= 64rem) {
+        min-width: 1279px;
+      }
+    }
+  }
   .xl\:col-span-4 {
     @media (width >= 80rem) {
       grid-column: span 4 / span 4;
@@ -3984,6 +4007,11 @@
   .xl\:px-3 {
     @media (width >= 80rem) {
       padding-inline: calc(var(--spacing) * 3);
+    }
+  }
+  .xl\:px-14 {
+    @media (width >= 80rem) {
+      padding-inline: calc(var(--spacing) * 14);
     }
   }
   .xl\:px-14\! {
